resources/code/cloud-formation/network-infrastructure.yml
AWSTemplateFormatVersion: 2010-09-09

Description:
    Stack Name
    - my-devops-network-stack

    CloudFormation Network Deployment.
    - VPC
    - Internet Gateway
    - Subnets
    - NAT Gateway
    - EIP

Parameters:
    EnvironmentName:
        Description: An environment name that will be prefixed to resource names.
        Type: String

    VpcCIDR:
        Description: Enter the CIDR for the the VPC. Default is 10.0.0.0/16.
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet1CIDR:
        Description: Please enter the IP range (CIDR notation) for the Public Subnet 1
        Type: String
        Default: 10.0.0.0/24

    PublicSubnet2CIDR:
          Description: Please enter the IP range (CIDR notation) for the Public Subnet 2
          Type: String
          Default: 10.0.1.0/24

    PrivateSubnet1CIDR:
          Description: Please enter the IP range (CIDR notation) for the Private Subnet 1
          Type: String
          Default: 10.0.2.0/24

    PrivateSubnet2CIDR:
          Description: Please enter the IP range (CIDR notation) for the Private Subnet 2
          Type: String
          Default: 10.0.3.0/24

Resources:

  # *****************************************
  # VPC
  #
  # Creating the VPC
  #
  # *****************************************

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsSupport: true
            EnableDnsHostnames: true
            Tags:
                -
                  Key: Name
                  Value: !Join ["", [!Ref EnvironmentName, "-VPC"]]

  # **********************************************************
  # INTERNET GATEWAY
  #
  # Creating and attaching the internet gateway to the VPC
  #
  #***********************************************************
    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
          Tags:
            -
              Key: Name
              Value: !Join ["", [!Ref EnvironmentName, "IGW"]]

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

  # **********************************************************
  # SUBNET
  #
  # Creating 4 subnets
  # 2 public subnets
  # 2 private subnets
  #
  #***********************************************************

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
          VpcId: !Ref VPC
          AvailabilityZone: !Select [0, !GetAZs '']
          CidrBlock: !Ref PublicSubnet1CIDR
          MapPublicIpOnLaunch: true
          Tags:
            -
              Key: Name
              Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

    PublicSubnet2:
          Type: AWS::EC2::Subnet
          Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [1, !GetAZs '']
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags:
              -
                Key: Name
                Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

    PrivateSubnet1:
          Type: AWS::EC2::Subnet
          Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [0, !GetAZs '']
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags:
              -
                Key: Name
                Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    PrivateSubnet2:
          Type: AWS::EC2::Subnet
          Properties:
            VpcId: !Ref VPC
            AvailabilityZone: !Select [1, !GetAZs '']
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags:
              -
                Key: Name
                Value: !Sub ${EnvironmentName} Private Subnet (AZ2)

  # **********************************************************
  # NAT GATEWAY
  #
  # Creating two NAT gataways
  # 1. Create the NAT gateway IPs
  # 2. Attached the IPs to the VPC
  # 3. NAT gateway 1 attached to public subnet 1
  # 4. NAT gateway 2 attached to public subnet 2
  #
  #***********************************************************

    NatGateway1EIP:
          Type: AWS::EC2::EIP
          DependsOn: InternetGatewayAttachment
          Properties:
            Domain: vpc

    NatGateway2EIP:
          Type: AWS::EC2::EIP
          DependsOn: InternetGatewayAttachment
          Properties:
            Domain: vpc

    NatGateway1:
          Type: AWS::EC2::NatGateway
          Properties:
            AllocationId: !GetAtt NatGateway1EIP.AllocationId
            SubnetId: !Ref PublicSubnet1
            Tags:
              -
                Key: Name
                Value: !Sub ${EnvironmentName} NAT 1

    NatGateway2:
          Type: AWS::EC2::NatGateway
          Properties:
            AllocationId: !GetAtt NatGateway2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2
            Tags:
              -
                Key: Name
                Value: !Sub ${EnvironmentName} NAT 2

  # **********************************************************
  # ROUTING
  #
  # Create two routing Table
  # 1. Private Route Table
  # 2. Public Route Table
  # 3. Set routing rules
  #
  #***********************************************************

    PublicRouteTable:
          Type: AWS::EC2::RouteTable
          Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Public Routes

    DefaultPublicRoute:
          Type: AWS::EC2::Route
          DependsOn: InternetGatewayAttachment
          Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PublicSubnet1RouteTableAssociation:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet2RouteTableAssociation:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet2

  # **********************************************************
  # Private Routing
  #
  #***********************************************************

    PrivateRouteTable1:
          Type: AWS::EC2::RouteTable
          Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    DefaultPrivateRoute1:
          Type: AWS::EC2::Route
          Properties:
            RouteTableId: !Ref PrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway1

    PrivateSubnet1RouteTableAssociation:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties:
            RouteTableId: !Ref PrivateRouteTable1
            SubnetId: !Ref PrivateSubnet1

    PrivateRouteTable2:
          Type: AWS::EC2::RouteTable
          Properties:
            VpcId: !Ref VPC
            Tags:
              - Key: Name
                Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    DefaultPrivateRoute2:
          Type: AWS::EC2::Route
          Properties:
            RouteTableId: !Ref PrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway2

    PrivateSubnet2RouteTableAssociation:
          Type: AWS::EC2::SubnetRouteTableAssociation
          Properties:
            RouteTableId: !Ref PrivateRouteTable2
            SubnetId: !Ref PrivateSubnet2

  # **********************************************************
  # Output
  #
  #***********************************************************

Outputs:
    VPC:
          Description: A reference to the created VPC
          Value: !Ref VPC
          Export:
            Name: !Sub ${EnvironmentName}-VPC-ID

    VPCPublicRouteTable:
          Description: Public Routing
          Value: !Ref PublicRouteTable
          Export:
            Name: !Sub ${EnvironmentName}-PUB-RT

    VPCPrivateRouteTable1:
          Description: Private Routing AZ1
          Value: !Ref PrivateRouteTable1
          Export:
            Name: !Sub ${EnvironmentName}-PRIV1-RT

    VPCPrivateRouteTable2:
          Description: Private Routing AZ2
          Value: !Ref PrivateRouteTable2
          Export:
            Name: !Sub ${EnvironmentName}-PRIV2-RT

    PublicSubnets:
          Description: A list of public subnets
          Value: !Join [",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
          Export:
            Name: !Sub ${EnvironmentName}-PUB-NETS

    PrivateSubnets:
          Description: A list of private subnets
          Value: !Join [",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
          Export:
            Name: !Sub ${EnvironmentName}-PRIV-NETS

    PublicSubnet1:
          Description: A reference to the public subnet in the 1st Availability Zone
          Value: !Ref PublicSubnet1
          Export:
            Name: !Sub ${EnvironmentName}-PUB1-SN

    PublicSubnet2:
          Description: A reference to the public subnet in the 2nd Availability Zone
          Value: !Ref PublicSubnet2
          Export:
            Name: !Sub ${EnvironmentName}-PUB2-SN

    PrivateSubnet1:
          Description: A reference to the private subnet in the 1st Availability Zone
          Value: !Ref PrivateSubnet1
          Export:
            Name: !Sub ${EnvironmentName}-PRIV1-SN

    PrivateSubnet2:
          Description: A reference to the private subnet in the 2nd Availability Zone
          Value: !Ref PrivateSubnet2
          Export:
            Name: !Sub ${EnvironmentName}-PRIV2-SN
