resources/code/cloud-formation/servers.yml
AWSTemplateFormatVersion: 2010-09-09

Description: This template deploys the security groups needed by the Udagram application

Parameters:
  EnvironmentName:
    Description: An Environment name that will be prefixed to resources
    Type: String

  S3CodeBucketName:
    Description: The name of the S3 bucket containing the zipped application code
      to be deployed
    Type: String

  S3CodeArchive:
    Description: The application code archive (must end with .zip)
    Type: String
    AllowedPattern: ^.*\.zip$

Resources:
  # *****************************************
  # SECURITY GROUP
  # 1. Load Balancer Security group
  # 2. Web server Security group
  #
  # *****************************************

  LoadBalancerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http traffic to our load balancer
      VpcId:
        Fn::ImportValue: !Sub '${EnvironmentName}-VPC-ID'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Load Balancer Security Group

  WebServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our hosts and SSH from local only
      VpcId:
        Fn::ImportValue: !Sub '${EnvironmentName}-VPC-ID'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          # Open port 22 here is for testing purposes.
          # Remove these 3 lines once you are satisfied with the environment
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Web Servers Security Group

  # *****************************************
  # LAUNCH CONFIGURATION
  #
  # *****************************************

  WebAppLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Install Apache 2
          apt-get update -y
          apt-get install unzip awscli -y
          apt-get install apache2 -y
          systemctl start apache2.service
          cd /var/www/html
          echo "hello world" > index.html
          # Copy the web application archive
          aws s3 cp s3://${S3CodeBucketName}/${S3CodeArchive} .
          # unzip the archive
          unzip -o ${S3CodeArchive}
          # Restart web server
          systemctl restart apache2.service
      SecurityGroups:
        - Ref: WebServerSecGroup
      InstanceType: t2.micro
      ImageId: ami-0a91cd140a1fc148a
      IamInstanceProfile: !Ref RootInstanceProfile
      BlockDeviceMappings:
        - DeviceName: '/dev/sdk'
          Ebs:
            VolumeSize: 10

  # *****************************************
  # AUTOSCALING GROUP
  #
  # *****************************************

  WebAppGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - Fn::ImportValue: !Sub '${EnvironmentName}-PRIV-NETS'
      LaunchConfigurationName: !Ref WebAppLaunchConfig
      MinSize: '2'
      MaxSize: '2'
      TargetGroupARNs: [!Ref WebAppTargetGroup]

  # *****************************************
  # LOAD BALANCER
  #
  # *****************************************

  WebAppLB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
        - Fn::ImportValue: !Sub '${EnvironmentName}-PUB1-SN'
        - Fn::ImportValue: !Sub '${EnvironmentName}-PUB2-SN'
      SecurityGroups: [!Ref LoadBalancerSecGroup]

  LBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WebAppTargetGroup
      LoadBalancerArn: !Ref WebAppLB
      Port: 80
      Protocol: HTTP

  ALBListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          TargetGroupArn: !Ref WebAppTargetGroup
      Conditions:
        - Field: path-pattern
          Values: [/]
      ListenerArn: !Ref LBListener
      Priority: 1

  WebAppTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 8
      HealthyThresholdCount: 2
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 3
      VpcId:
        Fn::ImportValue: !Sub '${EnvironmentName}-VPC-ID'

  # *****************************************
  # LOAD BALANCER
  #
  # *****************************************

  S3CodeBucketCopyRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /

  RootInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref S3CodeBucketCopyRole

  S3CodeBucketCopyPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: S3CodeBucketCopyPolicy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - s3:GetObject
            Resource: '*'
      Roles:
        - !Ref S3CodeBucketCopyRole

Outputs:
  WALB:
    Description: The URL of the web application load balancer
    Value: !Join ['', ['http://', !GetAtt WebAppLB.DNSName]]
